<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="horizontal"
    android:padding="4dip" >

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="match_parent"
        android:layout_height="100dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <Button
                android:id="@+id/start_client"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_client_service" >
            </Button>

            <Button
                android:id="@+id/stop_client"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop_client_service" >
            </Button>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/linearlayout" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <Button
                android:id="@+id/start_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_client_socket" >
            </Button>

            <Button
                android:id="@+id/stop_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop_client_socket" >
            </Button>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/editlayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/linearlayout2" >

        <EditText
            android:id="@+id/editip"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/text_ip"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/editport"
            android:text="@string/text_port"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2" />

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/text_submit"
            android:layout_weight="2" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editlayout" >

        <TextView
            android:id="@+id/textlog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello_world" />
    </ScrollView>

</RelativeLayout>